--- a/samples/D365CrmConsoleApp/packages.config
+++ b/samples/D365CrmConsoleApp/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.CrmSdk.Workflow" version="8.2.0" targetFramework="net461" />
   <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="8.2.0.5" targetFramework="net461" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.29.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
